--- a/gb/news392_3.md
+++ b/gb/news392_3.md
@@ -1,4 +1,17 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zsifxm298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787398.md#1" target="_blank">念贲：没有选票  我们去奋斗去努力</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787398.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5511-600x400-1-150x120.jpg" align ="left"></a>海峡两岸，
+说远不远、说近不近，
+隔海相望，
+我看见，对岸的同胞，
+正一人一张“选票”，在行使着他们的“权力”。
+我们，虽然同样也有着“主人翁”的称号，
+但我们却并没有一张，真正的“选票”，
+从来都没有，真正的行使过“主人”的权力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787244.md#1" target="_blank">程晓容：台大选重挫中共 五大冲击波牵动全球</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787244.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X6247-1-150x120.jpg" align ="left"></a>这场选战形同决战——投靠中共还是拒绝中共，事关主权、自由、权利的存亡，事关人民幸福、社会稳定。因此，抵制中共、清除邪恶势力，是2020年的全球重要议题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:28 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787346.md#1" target="_blank">岳高：好人被迫害 中共魔性显</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1603041450022382-150x120.jpg" align ="left"></a>明慧网近日报导，吉林省德惠市法轮功学员刘建英于二零一九年三月被非法判刑二年半，遭非法关押在吉林省女子监狱，十二月三十日被迫害离世，年仅五十七岁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:21 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786644.md#1" target="_blank">夏小强：台湾选举蔡英文获压倒性胜利 意义重大</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786644.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X6098-150x120.jpg" align ="left"></a>蔡英文大胜和韩国瑜的落败，还给世界带了另外一个重要的警示。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:38 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786305.md#1" target="_blank">李中泠：武汉肺炎疫情恐遭隐瞒 国人如何自保？</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-144529612-600x400-1-150x120.jpg" align ="left"></a>武汉“不明原因肺炎”疫情持续扩散，在短时间内从27宗快速上升至59宗案例，其中重症病患有7人。对此，香港大学感染及传染病中心总监何柏良说，有充分理由相信事件涉及新型病毒，且怀疑已经会人传人。截止1月4日，香港已有14例从武汉回港的相关病例个案，5人表示未到过疫情爆发地华南海鲜市场。武汉官方称，病原已排除萨斯（SARS）.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 6:43 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786081.md#1" target="_blank">周晓辉：台湾香港选举结果告诉习近平一件事</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786081.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/b4104e0ba032d1fc2883f4223b84926f-1-150x120.jpg" align ="left"></a>可以说，中共走到今天，不仅难获台湾人和香港人的信任，在国际上也是声名狼藉，其在被其封锁的国内也因政治、经济举措失当、迫害人权，被无数中国人唾骂。除了丧失民心，中共当局还丧失了自信心，官员的忠心和来自上天的“天心”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:55 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785916.md#1" target="_blank">颜丹： 中共开“科技奖励大会”是自娱自乐</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785916.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/921e6874f481a6ff165959457cf2802a-600x400-150x120.jpg" align ="left"></a>科技实力不如西方，并不是什么可耻的事儿。西方的实证科学也未必就适合中国的发展。而真正可耻的是，明明缺乏实力，却慌称自己有实力，甚至不惜盗取、诱骗它国技术，来装点自己的脸面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 3:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785937.md#1" target="_blank">王友群：蔡英文胜选的六大原因</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785937.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5907-600x400-2-150x120.jpg" align ="left"></a>2020年台湾总统大选，民进党候选人蔡英文以816万多票无悬念地成功连任。蔡英文胜选的原因很多。我认为，主要有六个：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 2:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785931.md#1" target="_blank">海风：蔡英文连任 北京“帮了大忙”</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785931.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X0722-150x120.jpg" align ="left"></a>台湾总统大选蔡英文胜选，她最需要“感谢”的应该是北京。不可否认，蔡这次顺利连任最大的“助选员”就是北京当局。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 2:20 AM			</td></tr>
@@ -19,12 +32,12 @@
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782895.md#1" target="_blank">夏小强：中共操控台湾大选失败 蔡英文可能将大胜</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782895.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20191229PHO0058l-150x120.jpg" align ="left"></a>中共对台湾总统选举的干预和操控从未停止过。随着台湾总统大选日的临近，民调显示中共支持的国民党候选人韩国瑜与蔡英文的差距不断加大，特别是三场总统候选人政见会和一场辩论会结束后，国民党翻盘的机会越来越少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 12:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782184.md#1" target="_blank">陈思敏：中共金融委为何高度关注中小银行</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782184.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e13d247e6d951f_ttl7dayE3U_15e13ae7ef517ed4_ttl7dayPR5_2d1382977f12a3fe-150x120.jpg" align ="left"></a>1月7日，中共金融稳定发展委员会（金融委）开年首次会议，刘鹤亲自主持，重点提2件事：中小企业融资问题以及中小银行资本补充。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 10:01 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782397.md#1" target="_blank">张林：被中共当成牲口奴役的中国人</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782397.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/03/5030546261491-150x120.jpg" align ="left"></a>与世界各地人民相比，那时候的中国人的住房是不折不扣的牲口棚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:53 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782100.md#1" target="_blank">乾元：从广州地陷看中共城市管理体制</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111261803942-600x400-150x120.jpg" align ="left"></a>去年12月1日发生的广州地陷导致三人失踪事件，在民众和媒体的沸沸扬扬中逐渐降低了热度......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 4:58 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781689.md#1" target="_blank">【名家专栏】对英国工党败选的思考</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1170379905-webcrop-1200x720-150x120.jpg" align ="left"></a>从成功中学习要比从失败中学习更容易一些，而在这两种情况下，我们的任务都是要找出哪种方法会有效，然后更多地利用这种有效的方法。但是当面对失败时，做到这一点是很困难的，尤其是当一个人已经很明显地失败了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 3:35 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781128.md#1" target="_blank">袁斌：伊朗上演复仇戏 中共党媒失望</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781128.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NJ6BB-600x400-2-150x120.jpg" align ="left"></a>苏莱曼尼被美军斩首后，伊朗当局高调宣称正在讨论13套复仇剧本，扬言要对美国发动“严厉且决定性报复”。可就在中共党媒和五毛幸灾乐祸的等着看美国的笑话时，不想这出复仇大戏才揭幕便谢幕了，压根就没他们期盼的高潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780728.md#1" target="_blank">王友群：天灾人祸不断伊朗报复美国难</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780728.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NJ9M1-600x400-2-150x120.jpg" align ="left"></a>在1月3日美国“斩首”伊朗第二号人物、中东恐怖大王苏莱曼尼之后，伊朗领导人相继发表讲话，表示要对美国进行严厉报复。
-
-中国古人讲，天时、地利、人和。伊朗对美国发动大规模军事报复，既不占天时，也没有地利，更不具人和。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 6:28 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786210.md#1" target="_blank">郑纯清：台湾大选观感</a><br></h3>二零二零是何年？
+双十双十将身翻。
+百年红潮九九落，
+海峡漂红浪滔天。
+台湾大选尘埃定，
+青天白日扬征帆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785398.md#1" target="_blank">项云：老百姓看“打黑除恶”</a><br></h3>不管中共宣扬和实施“打黑除恶”什么意义，老百姓却完全不看好。听了三个百姓对“打黑除恶”看法，有的挺新颖。整理了一下他们看法叙述如下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11785344.md#1" target="_blank">文静：“舆情引导”员把自己引向了险境</a><br></h3>共产党就是用各种手段维护他的统治，而它的这些手段都是把好人变成坏人。而坏人是没正义、没气节的，只要许以利益或恐吓，什么事都会去干，这样的人最便于中共的统治。希望你们每个人不要被它引诱成为坏人，帮其行恶，最后也成了罪人，把自己引向了危险的境地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11783854.md#1" target="_blank">王赫：中共政局——三病缠身 死前丧智</a><br></h3>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化：草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 11:01 AM			</td></tr>
@@ -49,10 +62,5 @@
 对手定中共，布阵亚太区。伊斯兰国灭，巴格达迪毙。
 
 揪住金三耳，中朝双簧息。阻伊朗挑衅，炸苏.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:35 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781626.md#1" target="_blank">石铭：中共迫害无辜老人 丧尽天良</a><br></h3>中共在迫害法轮功上没有任何法律依据和道德底线，特别是对老年法轮功学员的迫害更是如此，可谓灭绝人性、丧尽天良。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:33 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780962.md#1" target="_blank">李小刚：脑控原理之DNA共振</a><br></h3>目前所说的脑控武器其实早已诞生，并且一直在使用和不断的完善，要了解脑控的原理，就必须提到共振，因为脑控原理中包括了大脑共振和DNA共振。本文将主要对于DNA共振作以分析和探究。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 8:05 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780866.md#1" target="_blank">李清：习近平的唯一出路是解体中共</a><br></h3>宗教和预言对人类极为重要。有关人类最重要的事情在宗教和预言中都讲了。这里只提及诸葛亮的《马前课》。《马前课》共有十四课，每一课代表一个朝代，预言了中国的历史，其准确度惊人。
-
-预言如此准确，我们可以这样理解，历史其实就是安排好的一场戏，在一幕幕的上演。从预言的精准无误，我们也可以说一切皆有定数。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 7:30 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zsifxm298/djy/blob/master/gb/news392_3.md#1<br><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zsifxm298/djy/blob/master/gb/news392_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_3.htm">http://www.epochtimes.com/gb/news392_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
