--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -28,7 +28,7 @@
 公元196年对于汉献帝，对于曹操都是非常重要的一年。这一年，曹操亲自到洛阳迎接汉献帝回到许昌，汉朝的首都正式迁到许昌。同样就在这一年，汉朝更改年号，新的年号叫建安。
 
 年号是中国古代用来纪年所起的一种名号。汉献帝一共六个年号.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 2:22 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11801214.md#1" target="_blank">一七令．红楼梦</a><br></h3> 春。 五彩，霞云。 甄士隐，贾雨村。 红楼梦境，石头记存。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 12:05 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793154.md#1" target="_blank">思辨式写作：科技冷漠（上）</a><br></h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793154.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_209874568_Subscription_L-150x120.jpg" align ="left"></a>我们将一起探讨网路时代下的冷漠与犯罪，训练判读表格的能力，并学习打磨立意高度、理解深化论述的方法，借此提高论述品质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795826.md#1" target="_blank">七绝：有感</a><br></h3>山水琴觞怆泣诗， 摧心慨叹为相知。 会当了悟因缘事， 天宇澄明梦尽时。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:17 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798518.md#1" target="_blank">歌词：法光照我暖心窝</a><br></h3>法光照，暖心窝，
 我给师父唱支歌。
